--- a/package.json
+++ b/package.json
@@ -6,12 +6,30 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky",
+    "lint": "eslint src",
+    "check-types": "tsc --project tsconfig.json --pretty --noEmit"
+  },
+  "lint-staged": {
+    "*.+(ts|tsx)": [
+      "pnpm lint",
+      "bash -c 'pnpm check-types'"
+    ]
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/react-query": "^5.75.1",
+    "@tanstack/react-query-devtools": "^5.75.1",
+    "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
+    "react-hook-form": "^7.56.1",
+    "react-router": "^7.5.3",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -19,9 +37,16 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.22.0",
+    "eslint-plugin-check-file": "^3.2.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
+    "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
