--- a/package.json
+++ b/package.json
@@ -77,9 +77,12 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
+    "sharp": "^0.34.2",
+    "svgo": "^3.3.2",
     "tw-animate-css": "^1.2.9",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "vite-plugin-image-optimizer": "^1.1.8"
   }
 }
