--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sharp": "^0.34.2",
     "svgo": "^3.3.2",
     "tw-animate-css": "^1.2.9",
