--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,7 @@
-name: S3 Deploy
+name: Example workflow for S3 Deploy
+
 on: [push]
+
 jobs:
   run:
     runs-on: ubuntu-latest
@@ -9,8 +11,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Install dependencies
-        run: pnpm
+        run: pnpm install
 
       - name: Build
         run: pnpm build
