chore: update cache headers for deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,6 @@ jobs:
           dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
           invalidation: /
           delete-removed: true
-          no-cache: true
-          private: true
+          no-cache: false
+          private: false
           files-to-include: '{.*/**,**}'
