--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,12 +31,12 @@ jobs:
 
       - name: Sync static assets (cache forever)
         run: |
-          aws s3 sync build/ s3://${{ secrets.S3_BUCKET }}/ \
+          aws s3 sync dist/ s3://${{ secrets.S3_BUCKET }}/ \
             --exclude "index.html" \
             --cache-control "public, max-age=31536000, immutable" \
             --delete
 
       - name: Upload index.html (no cache)
         run: |
-          aws s3 cp build/index.html s3://${{ secrets.S3_BUCKET }}/index.html \
+          aws s3 cp dist/index.html s3://${{ secrets.S3_BUCKET }}/index.html \
             --cache-control "no-cache, no-store, must-revalidate"
