--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,17 +29,12 @@ jobs:
       - name: Build
         run: pnpm build
 
-      - name: Sync static assets (cache forever)
+      - name: Sync static assets
         run: |
           aws s3 sync dist/ s3://${{ secrets.S3_BUCKET }}/ \
             --exclude "index.html" \
             --cache-control "public, max-age=31536000, immutable" \
             --delete
-
-      - name: Upload index.html (no cache)
-        run: |
-          aws s3 cp dist/index.html s3://${{ secrets.S3_BUCKET }}/index.html \
-            --cache-control "no-cache, no-store, must-revalidate"
 
       - name: Invalidate CloudFront cache
         run: |
