[SHE-22] Auth | Cognito & Google Sign-in Setup (#9)
* chore: env vars for cognito & cognito config

* chore: [SHE-22] protected route setup

* chore: [SHE-22] remove unused dependency

* fix: [SHE-22] redirect action on unthenticated protected route access

--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.507.0",
+    "oidc-client-ts": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.56.1",
-    "react-query-auth": "^2.4.3",
+    "react-oidc-context": "^3.3.0",
     "react-router": "^7.5.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
