feat: [SHE-10] sign out

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 VITE_APP_API_URL=
 
+VITE_APP_COGNITO_DOMAIN=
+VITE_APP_COGNITO_LOGOUT_URI=
 VITE_APP_COGNITO_AUTHORITY=
 VITE_APP_COGNITO_CLIENT_ID=
 VITE_APP_COGNITO_REDIRECT_URI=
