chore: add env vars to deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,13 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      VITE_APP_COGNITO_DOMAIN: ${{ secrets.VITE_APP_COGNITO_DOMAIN }}
+      VITE_APP_COGNITO_LOGOUT_URI: ${{ secrets.VITE_APP_COGNITO_LOGOUT_URI }}
+      VITE_APP_COGNITO_AUTHORITY: ${{ secrets.VITE_APP_COGNITO_AUTHORITY }}
+      VITE_APP_COGNITO_CLIENT_ID: ${{ secrets.VITE_APP_COGNITO_CLIENT_ID }}
+      VITE_APP_COGNITO_REDIRECT_URI: ${{ secrets.VITE_APP_COGNITO_REDIRECT_URI }}
+      VITE_APP_COGNITO_RESPONSE_TYPE: ${{ secrets.VITE_APP_COGNITO_RESPONSE_TYPE }}
+      VITE_APP_COGNITO_SCOPE: ${{ secrets.VITE_APP_COGNITO_SCOPE }}
     steps:
       - uses: actions/checkout@v3
 
