--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,14 +36,15 @@ jobs:
       - name: Build
         run: pnpm build
 
-      - name: Sync static assets
-        run: |
-          aws s3 sync dist/ s3://${{ secrets.S3_BUCKET }}/ \
-            --cache-control "public, max-age=31536000, immutable" \
-            --delete
-
-      - name: Invalidate CloudFront cache
-        run: |
-          aws cloudfront create-invalidation \
-            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
-            --paths "/index.html"
+      - name: Deploy
+        uses: reggionick/s3-deploy@v4
+        with:
+          folder: dist
+          bucket: ${{ secrets.S3_BUCKET }}
+          bucket-region: ${{ secrets.S3_BUCKET_REGION }}
+          dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+          invalidation: /
+          delete-removed: true
+          no-cache: false
+          private: false
+          files-to-include: '{.*/**,**}'
