--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,5 +46,5 @@ jobs:
           invalidation: /
           delete-removed: true
           no-cache: false
-          private: false
+          private: true
           files-to-include: '{.*/**,**}'
