--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.56.1",
     "react-oidc-context": "^3.3.0",
-    "react-router": "^7.5.3",
+    "react-router-dom": "^7.7.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
     "zod": "^3.24.3"
