--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide": "^0.511.0",
     "lucide-react": "^0.507.0",
     "oidc-client-ts": "^3.2.1",
@@ -60,6 +63,7 @@
     "react-dropzone": "^14.3.8",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.56.1",
+    "react-i18next": "^16.0.0",
     "react-oidc-context": "^3.3.0",
     "react-router-dom": "^7.7.1",
     "tailwind-merge": "^3.2.0",
